-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 21, 25, 26
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8364787 | 25.0.2 | Yasumasa Suenaga | P4 | Resolved | Fixed | b01 |
I reported this issue in past, and it seems to be difficult to fix soon, and also JDK codebase has been updated in several years. It brings us to fix this issue easier than past.
So I propose again to emit the events from LeakProfiler when OOM happened.
[1] https://mail.openjdk.org/pipermail/hotspot-jfr-dev/2019-January/000381.html
- backported by
-
JDK-8364787 Dump JFR recording on CrashOnOutOfMemoryError
-
- Resolved
-
- causes
-
JDK-8373257 JFR deadlocks JVM during emergency shutdown
-
- Open
-
-
JDK-8371014 Dump JFR recording on CrashOnOutOfMemoryError is incorrectly implemented
-
- Resolved
-
- relates to
-
JDK-8372545 Lilliput2: TestEmergencyDumpAtOOM fails because of JFR Leak Profiler being disabled
-
- In Progress
-
-
JDK-8370260 Test jdk/jfr/event/oldobject/TestEmergencyDumpAtOOM.java timed out
-
- Resolved
-
-
JDK-8196050 Remove -XX:FlightRecorder=dumppath=
-
- Open
-
-
JDK-8213435 Dump JFR recording on ExitOnOutOfMemoryError
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk25u/af32b947
-
Commit(master)
openjdk/jdk/8ed214f3
-
Review(master)
openjdk/jdk21u-dev/2025
-
Review(master)
openjdk/jdk25u/56
-
Review(master)
openjdk/jdk/26468