8364090: Dump JFR recording on CrashOnOutOfMemoryError